--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,10 +3,105 @@
     <head>
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
-        {% block stylesheets %}{% endblock %}
+        {% block stylesheets %}
+           
+            <link rel="stylesheet" href="{{ asset('css/bootstrap.min.css') }}" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+            <link rel="stylesheet" href="{{ asset('css/estilo.css') }}" >
+        
+        {% endblock %}
     </head>
     <body>
-        {% block body %}{% endblock %}
-        {% block javascripts %}{% endblock %}
+        
+        {% block navbar %}
+
+            <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #CCCD00;">
+                <a href="https://www.udenar.edu.co/"> <img src="{{ asset('img/udenar_logo.jpg') }}" > </a>
+                <div class="collapse navbar-collapse " id="navbarText">
+                    <ul class="navbar-nav mr-auto ">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="{{ path('redes') }}">Inicio <span class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href=" {{ path('servicio') }} ">Servicios</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ path('about') }}">Acerca de</a>
+                        </li>
+                    </ul>
+                    <ul class="navbar-nav">
+
+                        {% if app.user %}
+
+                            <li class="dropdown">
+                                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    {{ app.user.email }}
+                                </button>
+                                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                                    <a class="dropdown-item" href="{{ path('app_logout') }}">Cerrar sesión</a>
+                                </div>
+                            </li>
+
+                        {% else %}
+
+                            <li class="nav-item " >
+                                <a class="nav-link inicioSesion" href="{{ path('app_login') }}">Iniciar sesión</a>
+                            </li>
+
+                        {% endif %}
+
+                    </ul>
+                </div>
+            </nav>
+
+        {% endblock %}
+        
+        <div class="container-fluid">
+            
+            {% block body %}
+                
+
+            {% endblock %}
+
+        </div>
+
+        {% block pie %}
+
+            <div class="container-fluid footer">
+                <div class="row row_ancha">
+                    <div class="col-3">
+                        <p>Torobajo - Calle 18 Carrera 50 <br>
+                        Conmutador: (+ 057) 7244309 –7311449 Ext. 500 <br>
+                        Línea Gratuita Nacional: 018000957071 <br>
+                        Notificaciones judiciales: judiciales@udenar.edu.co <br>
+                        Pasto - Nariño., Colombia</p>
+                    </div>
+                    <div class="col-3">
+                        <a class="nav-link" href="http://secretariageneral.udenar.edu.co/"> <img src= {{ asset('img/visto.png') }} alt="Visto">  Normativa</a> <hr>
+                        <a class="nav-link" href="http://contratacion.udenar.edu.co/"> <img src= {{ asset('img/visto.png') }} alt="Visto"> Compras y contratación</a> <hr>
+                        <a class="nav-link" href="http://www.udenar.edu.co/rendicion-de-cuentas/"> <img src= {{ asset('img/visto.png') }} alt="Visto"> Rendición de cuentas</a> <hr>
+                        <a class="nav-link" href="https://www.udenar.edu.co/dependencias/acreditacion/calidad/"> <img src= {{ asset('img/visto.png') }} alt="Visto"> Gestión de calidad</a>
+                    </div>
+                    <div class="col-3">
+                        <a class="nav-link" href="https://www.udenar.edu.co/contacto/"> <img src= {{ asset('img/visto.png') }} alt="Visto"> Direcciones y mapas </a> <hr>
+                        <a class="nav-link" href="https://www.udenar.edu.co/dependencias/vicerrectoria-academica/aula-de-informatica/administracion-red-de-datos/#"> <img src= {{ asset('img/visto.png') }} alt="Visto"> Redes sociales </a> <hr>
+                        <a class="nav-link" href="http://encuestas.udenar.edu.co/"> <img src= {{ asset('img/visto.png') }} alt="Visto"> Encuestas </a> <hr>
+                        <a class="nav-link" href="https://www.udenar.edu.co/transparencia/"> <img src= {{ asset('img/visto.png') }} alt="Visto"> Atención al ciudadano </a>
+                    </div>
+                    <div class="col-3">
+                        <a class="nav-link" href="https://www.udenar.edu.co/dependencias/vicerrectoria-academica/aula-de-informatica/administracion-red-de-datos/#"> <img src= {{ asset('img/visto.png') }} alt="Visto"> Declararción de privacidad </a> <hr>
+                        <a class="nav-link" href="https://www.udenar.edu.co/dependencias/vicerrectoria-academica/aula-de-informatica/administracion-red-de-datos/#"> <img src= {{ asset('img/visto.png') }} alt="Visto"> Términos y condiciones de uso </a>
+                    </div>
+                </div>
+            </div>
+
+        {% endblock %}
+
+        {% block javascripts %}
+
+            <script src="{{ asset('js/jquery-3.3.1.slim.min.js') }}" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+            <script src="{{ asset('js/popper.min.js') }}" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+            <script src="{{ asset('js/bootstrap.min.js') }}" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+        
+        {% endblock %}
     </body>
 </html>
